--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,6 +92,32 @@ b {
     border-radius: 2px;
 }
 
+.menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width:100%;
+    border-radius: 0.5rem 0.5rem 0 0;
+    overflow: hidden;
+  }
+
+.menu > div{
+    background:#BACD92;
+    width: 100%;
+    text-align: center;
+    transition: background 299ms;
+    cursor: pointer;
+    padding:0.75rem 0.5rem;
+  }
+
+  .menu > div:hover{
+    background: #75A47F;
+  }
+  .menu > div > a {
+    text-decoration: none;
+    color: white;
+}
+
 @media only screen and (max-width: 480px) {
     .container-header {
         margin: auto;
