--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,13 +107,21 @@ b {
     text-align: center;
     transition: background 299ms;
     cursor: pointer;
-    padding:0.75rem 0.5rem;
-  }
+ }
 
-  .menu > div:hover{
+.menu > div > a{
+
+    padding:0.75rem 0.5rem;
+    width:100%;
+    display: block;
+    height: 100%;
+    
+}
+
+.menu > div:hover{
     background: #75A47F;
   }
-  .menu > div > a {
+.menu > div > a {
     text-decoration: none;
     color: white;
 }
