--- a/stylesheet.css
+++ b/stylesheet.css
@@ -348,7 +348,7 @@ h2 {
 
 .bunkimage {
     display: inline-block;
-    background-image: url(floorplan.jpg);
+    background-image: url(floorplan1.jpg);
     background-repeat: no-repeat;
     background-size: contain;
     width: 25vw;
