--- a/stylesheet.css
+++ b/stylesheet.css
@@ -448,7 +448,7 @@ h2 {
 .contact-left {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     gap: 20px;
     width: 100%;
 }
