--- a/stylesheet.css
+++ b/stylesheet.css
@@ -451,6 +451,25 @@ h2 {
     align-items: center;
     gap: 20px;
     width: 100%;
+    margin-top: -22rem;
+}
+
+@media only screen and (max-width: 480px) {
+    .contact-left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        width: 100%;
+        margin-top: 0rem;
+    }
+    .contact-left-title {
+        align-items: center;
+        justify-content: center;
+        margin: 1rem;
+        width: 100%;
+        font-size: small;
+    }
 }
 
 .contact-right {
